@@ -1,5 +1,11 @@
 2001-12-08  Havoc Pennington  <hp@pobox.com>
 
+	* gconf/gconf-client.c: fix some warnings
+
+	* gconf/gconf-internals.h: try to fix gettext issues
+
+2001-12-08  Havoc Pennington  <hp@pobox.com>
+
 	* gconf/gconf-value.c (gconf_value_validate): take const arg
 
 	* gconf/gconf.c: add internal API to check that GConfEngine isn't
